# cloudflare-cli-rs

./: .codacy.yml  .gitignore  .markdownlint.json  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  deny.toml
.beads/: issues.jsonl
.claude/skills/: quality.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: DEVELOPMENT.md  RELEASE.md  RELEASE_SETUP.md
docs/examples/: dns-records.csv  zone.bind
scripts/: quality-check.ps1  quality-check.sh
src/: lib.rs  main.rs  runner.rs
src/api/: cache.rs  d1.rs  dns.rs  mod.rs  pages.rs  r2.rs  response.rs  token.rs  zone.rs
src/cli/: cache.rs  config.rs  d1.rs  dns.rs  mod.rs  pages.rs  r2.rs  token.rs  zone.rs
src/client/: mod.rs  retry.rs
src/config/: mod.rs  validation.rs
src/error/: category.rs  mod.rs
src/metrics/: export.rs  mod.rs
src/ops/: cache.rs  d1.rs  dns.rs  mod.rs  pages.rs  r2.rs  token.rs  zone.rs
src/output/: csv.rs  json.rs  mod.rs  progress.rs  table.rs
src/utils/: filters.rs  mod.rs  validation.rs
tests/: cli_tests.rs  integration.rs
tests/common/: mod.rs
tests/fixtures/: d1_database_list_response.json  d1_database_single_response.json  d1_query_response.json  dns_record_list_response.json  error_401_response.json  error_403_response.json  error_404_response.json  error_429_response.json  zone_list_response.json
tests/integration/: cache_tests.rs  client_tests.rs  d1_tests.rs  dns_import_tests.rs  dns_tests.rs  error_tests.rs  pages_tests.rs  r2_tests.rs  runner_tests.rs  token_tests.rs  zone_tests.rs
