[package]
name = "cfad"
version = "0.2.0"
edition = "2021"
authors = ["David Forbes <davidcforbes@aol.com>"]
license = "MIT"
description = "Cloudflare Admin CLI - Rust-based management tool for Cloudflare"
repository = "https://github.com/davidcforbes/cfad"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
csv = "1.3"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dirs = "6.0"

# Progress & UI
comfy-table = "7.1"

# Utilities
regex = "1.10"
url = "2.5"

[dev-dependencies]
# Testing
wiremock = "0.6"

[[test]]
name = "common"
path = "tests/common/mod.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
